crates/textual-rs/tests/snapshots/widget_tests__snapshot_scroll_view_with_content.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"Row 0               "
"Row 1               "
"Row 2              ▄"
"Row 3               "
" ────────────────── "
