crates/textual-rs/tests/snapshots/widget_tests__snapshot_tabbed_content.snap
---
source: crates/textual-rs/tests/widget_tests.rs
assertion_line: 2097
expression: "format!(\"{}\", test_app.backend())"
---
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
