crates/textual-rs/tests/snapshots/widget_tests__snapshot_tabs_first_active.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
" Tab1  |  Tab2  |  Tab3                 "
"▎                                       "
"▎                                       "
