crates/textual-rs/tests/snapshots/widget_tests__snapshot_tree_collapsed.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"├── ▶ Branch ABranch A                  "
"├── ▶ Branch BBranch B                  "
"└── Leaf CLeaf C                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
