crates/textual-rs/tests/snapshots/widget_tests__snapshot_tree_expanded.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"├── ▼ Branch ABranch A                  "
"│   ├── Leaf A1Leaf A1                  "
"│   └── Leaf A2Leaf A2                  "
"├── ▼ Branch BBranch B                  "
"│   └── Leaf B1Leaf B1                  "
"└── Leaf CLeaf C                        "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
