crates/textual-rs/tests/snapshots/widget_tests__text_area_line_numbers.snap
---
source: crates/textual-rs/tests/widget_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"1 line one                              "
"2 line two                              "
"3 line three                            "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
"▎                                       "
